# MultiVoxel

./: .gitignore  AGENTS.md  CMakeLists.txt  setup_vcpkg_windows.bat
Assets/MultiVoxel/Shader/: FatFragment.glsl  FatVertex.glsl
MultiVoxel/Header/Client/: ClientApplication.hpp  ClientBase.hpp  ClientInterfaceLayer.hpp  ReplicationReceiver.hpp
MultiVoxel/Header/Client/Core/: InputManager.hpp  Window.hpp
MultiVoxel/Header/Client/Packet/: ReplicationReceiver.hpp  RpcClient.hpp
MultiVoxel/Header/Client/Render/: Mesh.hpp  Shader.hpp  ShaderManager.hpp  Vertex.hpp
MultiVoxel/Header/Client/Render/Vertices/: FatVertex.hpp
MultiVoxel/Header/Independent/: Application.hpp
MultiVoxel/Header/Independent/Core/: Settings.hpp
MultiVoxel/Header/Independent/ECS/: Component.hpp  ComponentFactory.hpp  GameObject.hpp  GameObjectManager.hpp
MultiVoxel/Header/Independent/Math/: Camera.hpp  Matrix.hpp  Transform.hpp  Vector.hpp
MultiVoxel/Header/Independent/Network/: Message.hpp  MessageDispatcher.hpp  NetworkManager.hpp  PacketReceiver.hpp  PacketSender.hpp  PeerConnection.hpp
MultiVoxel/Header/Independent/Thread/: MainThreadExecutor.hpp
MultiVoxel/Header/Independent/Utility/: AssetPath.hpp  FileHelper.hpp  IndexedString.hpp  SingletonManager.hpp
MultiVoxel/Header/Server/: PermissionManager.hpp  ReplicationSender.hpp  ServerApplication.hpp  ServerBase.hpp  ServerInterfaceLayer.hpp
MultiVoxel/Header/Server/ECS/: Component.hpp  GameObject.hpp  GameObjectManager.hpp
MultiVoxel/Header/Server/Entity/: EntityBase.hpp
MultiVoxel/Header/Server/Entity/Entities/: EntityPlayer.hpp
MultiVoxel/Header/Server/Packet/: ReplicationSender.hpp  RpcReceiver.hpp
MultiVoxel/Header/Server/RPC/: RpcTypes.hpp
MultiVoxel/Source/: Application.cpp  MultiVoxel.cpp  glad.cpp
